--- a/remake.yml
+++ b/remake.yml
@@ -1,4 +1,5 @@
 ## a remake file to automate the process of assembling the dataset
+## edited by Andrew in September 2016
 
 ## first, list all the packages required
 packages:
@@ -17,11 +18,10 @@ targets:
       - visits
       - broms
       - spp
-      - trts
 
   all:
     depends:
-      - final
+      - trts_all_filtered
 #  downloads:
 #      -
 ## or should i give the original downloads a "clean" step, so that I could just delete them all and remake it again?
@@ -40,8 +40,11 @@ targets:
   spp:
     command: bwg_get(I("species"))
 
+  getargs:
+    command: list(tachet = I("true"), traits = I("true"))
+
   trts_all:
-    command: bwg_get("species", list(tachet = "true", traits = "true"))
+    command: bwg_get(I("species"), getargs)
 
   dats_filtered:
     command: filter_test(dats)
@@ -52,7 +55,3 @@ targets:
   trts_all_filtered:
     command: combine_multi_names(trts_all)
 
-
-# moving down
-  final:
-    command: I(1)
