--- a/remake.yml
+++ b/remake.yml
@@ -10,6 +10,8 @@ packages:
   - stringr
   - assertr
   - lubridate
+  - rmarkdown
+  - knitr
 
 sources:
   #- Rfunctions
@@ -30,6 +32,7 @@ targets:
       - trts_all_filtered
       - abundance
       - detritus_wider
+      - Detritus_missing.html
 #  downloads:
 #      -
 ## or should i give the original downloads a "clean" step, so that I could just delete them all and remake it again?
@@ -141,3 +144,8 @@ targets:
 
   detritus_wider_cardoso_corrected:
     command: correct_cardoso_detritus_wider(detritus_wider)
+
+  Detritus_missing.html:
+    command: render("Detritus_missing.Rmd")
+    depends:
+      - detritus_wider_cardoso_corrected
