functions to predict values of detritus mass from detritus volume

--- a/remake.yml
+++ b/remake.yml
@@ -165,8 +165,14 @@ targets:
   model_fpom_g_ml:
     command: fit_fpom_g_ml(fpom_fg_data)
 
-  fpom_convert_ml_into_g:
-    command: predict_function(model_fpom_g_ml)
+  ## then use both model and data to create the new variables
+
+  detritus_wider_FG_g:
+    command: estimate_fpom_g_from_ml(detritus_wider_cardoso_corrected, model_fpom_g_ml)
+
+
+  detritus_wider_fpom_g_predicted:
+    command: predict_fpom_g(detritus_wider_FG_g)
 
   Detritus_missing.html:
     command: render("Detritus_missing.Rmd")
