move figures etc to the data directory

--- a/remake_sites.yml
+++ b/remake_sites.yml
@@ -25,6 +25,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -44,6 +45,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -63,6 +65,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -82,6 +85,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -101,6 +105,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -120,6 +125,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -139,6 +145,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -158,6 +165,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
@@ -177,6 +185,7 @@ targets:
     knitr:
       input: data_quality/data_quality.Rmd
       auto_figure_prefix: true
+      chdir: true
     depends:
       - visits_date
       - dats_date
