--- a/remake.yml
+++ b/remake.yml
@@ -30,6 +30,7 @@ sources:
   - Rfunctions/03_detritus_interpolation.R
   - Rfunctions/99_mapping_checking.R
   - Rfunctions/find_symbols.R
+  - Rfunctions/03_detritus_equations.R
 
 targets:
   downloads:
@@ -194,11 +195,11 @@ targets:
 
   # get a pretty map
 
-  stamenmap:
-    command: get_map_SA()
+#  stamenmap:
+#    command: get_map_SA()
 
 
-include:
-- remake_sites.yml
+#include:
+#- remake_sites.yml
 
 
