--- a/remake.yml
+++ b/remake.yml
@@ -22,6 +22,7 @@ packages:
   - assertthat
   - lazyeval
   - assertr
+  - prediction
 
 sources:
   #- Rfunctions
@@ -192,16 +193,12 @@ targets:
     command: fit_fpom_g_ml(fpom_fg_data)
 
   ## then use both model and data to create the new predictions
-  detritus_wider_FG_g:
-    command: estimate_fpom_g_from_ml(detritus_wider_correct_frenchguiana, model_fpom_g_ml)
-
-  ## in a separate step, extract the model predictions into a column
-  detritus_wider_fpom_g_predicted:
-    command: predict_fpom_g(detritus_wider_FG_g)
+  detritus_wider_fpom_g_pred:
+    command: add_predictions_to_data(detritus_wider_correct_frenchguiana, model_fpom_g_ml)
 
   ## combine the observed and predicted values (keep se column)
   detritus_wider_0_150_added:
-    command: combine_observed_predicted_0_150_det(detritus_wider_correct_frenchguiana, detritus_wider_fpom_g_predicted)
+    command: combine_observed_predicted_0_150_det(detritus_wider_fpom_g_pred)
 
 
 
