--- a/remake.yml
+++ b/remake.yml
@@ -32,6 +32,7 @@ sources:
   - Rfunctions/99_mapping_checking.R
   - Rfunctions/find_symbols.R
   - Rfunctions/03_detritus_equations.R
+  - Rfunctions/output_spp_dictionary.R
 
 targets:
   downloads:
@@ -49,6 +50,7 @@ targets:
       - outputs/visit_information.csv
       - outputs/detritus.csv
       - outputs/fpom_fg_data.csv
+      - outputs/spp_dictonary.csv
 
   all:
     depends:
@@ -217,6 +219,12 @@ targets:
 
   outputs/fpom_fg_data.csv:
     command: write_csv(fpom_fg_data, path = target_name)
+
+  spp_dictonary:
+    command: output_spp_dictionary(abundance_filtered, broms_date, visits_date, trts_all_values)
+
+  outputs/spp_dictionary.csv:
+    command: write_csv(spp_dictonary, path = target_name)
 
 
 # estimating missing detritus with equations ----------------------------------
