include more in plotting info. write out object

--- a/remake.yml
+++ b/remake.yml
@@ -52,6 +52,7 @@ targets:
       - outputs/fpom_fg_data.csv
       - outputs/spp_dictionary.csv
       - outputs/detritus_models.rds
+      - outputs/detritus_plots.rds
 
   all:
     depends:
@@ -229,6 +230,9 @@ targets:
 
   outputs/detritus_models.rds:
     command: write_rds(detritus_estimated_with_model, path = target_name)
+
+  outputs/detritus_plots.rds:
+    command: write_rds(detritus_model_plots, path = target_name)
 
 
 # estimating missing detritus with equations ----------------------------------
