--- a/remake.yml
+++ b/remake.yml
@@ -63,7 +63,7 @@ targets:
       - detritus_model_plots
       - outputs/bromeliad_observations.csv
       - bromeliad_detritus
-      - traits_all_MD_added
+      - traits_all_CP_added
       #- reports
 #  downloads:
 #      -
@@ -315,3 +315,20 @@ targets:
   traits_all_MD_added:
     command: add_MD_trait(traits_all_renamed)
 
+  CP_genus:
+    command: read_trait_data("data-intermediate/CPgenus_updated.csv")
+
+  CP_family:
+    command: read_trait_data("data-intermediate/CPfamily_updated.csv")
+
+  BF_genus:
+    command: read_trait_data("data-intermediate/BFgenus_updated.csv")
+
+  BF_family:
+    command: read_trait_data("data-intermediate/BFfamily_updated.csv")
+
+  traits_all_CP_added:
+    command: put_traits_together(traits_all_MD_added, CP_genus, CP_family, I("CP"))
+
+  traits_all_BF_added:
+    command: put_traits_together(traits_all_CP_added, BF_genus, BF_family, I("BF"))
